parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    Break
    Function
    IGNORE

Grammar

Rule 0     S' -> geral
Rule 1     geral -> Inicio statements Fim
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> While AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses
Rule 5     tipoVar -> TipoVarInt
Rule 6     tipoVar -> TipoVarReal
Rule 7     tipoVar -> TipoVarString
Rule 8     tipoVar -> TipoVarBool
Rule 9     statement -> Var OpAtrib expr
Rule 10    statement -> Var OpAtrib Texto
Rule 11    statement -> Var OpAtrib Var
Rule 12    statement -> Var OpAtrib Inteiro
Rule 13    statement -> Var OpAtrib Real
Rule 14    statement -> Var OpAtrib funcao
Rule 15    statement -> Var OpAtrib entrada
Rule 16    statement -> tipoVar Var OpAtrib expr
Rule 17    statement -> TipoVarString Var OpAtrib Texto
Rule 18    statement -> tipoVar Var OpAtrib Var
Rule 19    statement -> TipoVarInt Var OpAtrib Inteiro
Rule 20    statement -> TipoVarReal Var OpAtrib Inteiro
Rule 21    statement -> TipoVarReal Var OpAtrib Real
Rule 22    statement -> tipoVar Var OpAtrib funcao
Rule 23    statement -> TipoVarString Var OpAtrib entrada
Rule 24    statement -> TipoVarInt Var OpAtrib entrada
Rule 25    statement -> TipoVarReal Var OpAtrib entrada
Rule 26    statement -> TipoVarBool Var OpAtrib entrada
Rule 27    statement -> TipoVarBool Var OpAtrib true_false
Rule 28    statement -> If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses
Rule 29    statement -> If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses senaose
Rule 30    statement -> If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses senaose Else AbreParenteses statements FechaParenteses
Rule 31    statement -> If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses Else AbreParenteses statements FechaParenteses
Rule 32    statement -> funcao
Rule 33    statement -> funcao AbreParenteses statements FechaParenteses
Rule 34    cond_param -> Var OpRelaMenor Inteiro
Rule 35    cond_param -> Var OpRelaMenor Real
Rule 36    cond_param -> Var OpRelaMenor Var
Rule 37    cond_param -> Var OpRelaMaior Inteiro
Rule 38    cond_param -> Var OpRelaMaior Real
Rule 39    cond_param -> Var OpRelaMaior Var
Rule 40    cond_param -> Var OpRelaMenorIgual Inteiro
Rule 41    cond_param -> Var OpRelaMenorIgual Real
Rule 42    cond_param -> Var OpRelaMenorIgual Var
Rule 43    cond_param -> Var OpRelaMaiorIgual Inteiro
Rule 44    cond_param -> Var OpRelaMaiorIgual Real
Rule 45    cond_param -> Var OpRelaMaiorIgual Var
Rule 46    cond_param -> Var OpRelaIgual Inteiro
Rule 47    cond_param -> Var OpRelaIgual Real
Rule 48    cond_param -> Var OpRelaIgual Var
Rule 49    cond_param -> Var OpRelaDiferente Inteiro
Rule 50    cond_param -> Var OpRelaDiferente Real
Rule 51    cond_param -> Var OpRelaDiferente Var
Rule 52    cond_param -> Var OpLogAnd Inteiro
Rule 53    cond_param -> Var OpLogAnd Real
Rule 54    cond_param -> Var OpLogAnd Var
Rule 55    cond_param -> Var OpLogOr Inteiro
Rule 56    cond_param -> Var OpLogOr Real
Rule 57    cond_param -> Var OpLogOr Var
Rule 58    statement -> Print AbreParenteses expr FechaParenteses
Rule 59    true_false -> BoolTrue
Rule 60    true_false -> BoolFalse
Rule 61    cond_param -> cond_param OpLogAnd cond_param
Rule 62    cond_param -> cond_param OpLogOr cond_param
Rule 63    expr -> Inteiro
Rule 64    expr -> Real
Rule 65    expr -> Var
Rule 66    expr -> expr OpMatSoma expr
Rule 67    expr -> expr OpMatSub expr
Rule 68    expr -> expr OpMatMult expr
Rule 69    expr -> expr OpMatDiv expr
Rule 70    expr -> AbreParenteses expr FechaParenteses
Rule 71    expr -> Texto
Rule 72    param_vazio -> <empty>
Rule 73    param -> Inteiro
Rule 74    param -> Real
Rule 75    param -> Texto
Rule 76    param -> Var
Rule 77    param -> param Virgula param
Rule 78    entrada -> Input AbreParenteses Texto FechaParenteses
Rule 79    entrada -> Input AbreParenteses FechaParenteses
Rule 80    funcao -> AbreParenteses param_vazio FechaParenteses
Rule 81    funcao -> AbreParenteses param FechaParenteses
Rule 82    senaose -> Elseif AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses
Rule 83    senaose -> senaose senaose
Rule 84    senaose -> senaose

Terminals, with rules where they appear

AbreParenteses       : 4 4 28 28 29 29 30 30 30 31 31 31 33 58 70 78 79 80 81 82 82
BoolFalse            : 60
BoolTrue             : 59
Break                : 
Else                 : 30 31
Elseif               : 82
FechaParenteses      : 4 4 28 28 29 29 30 30 30 31 31 31 33 58 70 78 79 80 81 82 82
Fim                  : 1
Function             : 
IGNORE               : 
If                   : 28 29 30 31
Inicio               : 1
Input                : 78 79
Inteiro              : 12 19 20 34 37 40 43 46 49 52 55 63 73
OpAtrib              : 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
OpLogAnd             : 52 53 54 61
OpLogOr              : 55 56 57 62
OpMatDiv             : 69
OpMatMult            : 68
OpMatSoma            : 66
OpMatSub             : 67
OpRelaDiferente      : 49 50 51
OpRelaIgual          : 46 47 48
OpRelaMaior          : 37 38 39
OpRelaMaiorIgual     : 43 44 45
OpRelaMenor          : 34 35 36
OpRelaMenorIgual     : 40 41 42
Print                : 58
Real                 : 13 21 35 38 41 44 47 50 53 56 64 74
Texto                : 10 17 71 75 78
TipoVarBool          : 8 26 27
TipoVarInt           : 5 19 24
TipoVarReal          : 6 20 21 25
TipoVarString        : 7 17 23
Var                  : 9 10 11 11 12 13 14 15 16 17 18 18 19 20 21 22 23 24 25 26 27 34 35 36 36 37 38 39 39 40 41 42 42 43 44 45 45 46 47 48 48 49 50 51 51 52 53 54 54 55 56 57 57 65 76
Virgula              : 77
While                : 4
error                : 

Nonterminals, with rules where they appear

cond_param           : 4 28 29 30 31 61 61 62 62 82
entrada              : 15 23 24 25 26
expr                 : 9 16 58 66 66 67 67 68 68 69 69 70
funcao               : 14 22 32 33
geral                : 0
param                : 77 77 81
param_vazio          : 80
senaose              : 29 30 83 83 84
statement            : 2 3
statements           : 1 2 4 28 29 30 30 31 31 33 82
tipoVar              : 16 18 22
true_false           : 27

Parsing method: LALR

state 0

    (0) S' -> . geral
    (1) geral -> . Inicio statements Fim

    Inicio          shift and go to state 2

    geral                          shift and go to state 1

state 1

    (0) S' -> geral .



state 2

    (1) geral -> Inicio . statements Fim
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . While AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses
    (9) statement -> . Var OpAtrib expr
    (10) statement -> . Var OpAtrib Texto
    (11) statement -> . Var OpAtrib Var
    (12) statement -> . Var OpAtrib Inteiro
    (13) statement -> . Var OpAtrib Real
    (14) statement -> . Var OpAtrib funcao
    (15) statement -> . Var OpAtrib entrada
    (16) statement -> . tipoVar Var OpAtrib expr
    (17) statement -> . TipoVarString Var OpAtrib Texto
    (18) statement -> . tipoVar Var OpAtrib Var
    (19) statement -> . TipoVarInt Var OpAtrib Inteiro
    (20) statement -> . TipoVarReal Var OpAtrib Inteiro
    (21) statement -> . TipoVarReal Var OpAtrib Real
    (22) statement -> . tipoVar Var OpAtrib funcao
    (23) statement -> . TipoVarString Var OpAtrib entrada
    (24) statement -> . TipoVarInt Var OpAtrib entrada
    (25) statement -> . TipoVarReal Var OpAtrib entrada
    (26) statement -> . TipoVarBool Var OpAtrib entrada
    (27) statement -> . TipoVarBool Var OpAtrib true_false
    (28) statement -> . If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses
    (29) statement -> . If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses senaose
    (30) statement -> . If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses senaose Else AbreParenteses statements FechaParenteses
    (31) statement -> . If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses Else AbreParenteses statements FechaParenteses
    (32) statement -> . funcao
    (33) statement -> . funcao AbreParenteses statements FechaParenteses
    (58) statement -> . Print AbreParenteses expr FechaParenteses
    (5) tipoVar -> . TipoVarInt
    (6) tipoVar -> . TipoVarReal
    (7) tipoVar -> . TipoVarString
    (8) tipoVar -> . TipoVarBool
    (80) funcao -> . AbreParenteses param_vazio FechaParenteses
    (81) funcao -> . AbreParenteses param FechaParenteses

    While           shift and go to state 5
    Var             shift and go to state 7
    TipoVarString   shift and go to state 10
    TipoVarInt      shift and go to state 11
    TipoVarReal     shift and go to state 12
    TipoVarBool     shift and go to state 13
    If              shift and go to state 14
    Print           shift and go to state 15
    AbreParenteses  shift and go to state 6

    statements                     shift and go to state 3
    statement                      shift and go to state 4
    funcao                         shift and go to state 8
    tipoVar                        shift and go to state 9

state 3

    (1) geral -> Inicio statements . Fim
    (2) statements -> statements . statement
    (4) statement -> . While AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses
    (9) statement -> . Var OpAtrib expr
    (10) statement -> . Var OpAtrib Texto
    (11) statement -> . Var OpAtrib Var
    (12) statement -> . Var OpAtrib Inteiro
    (13) statement -> . Var OpAtrib Real
    (14) statement -> . Var OpAtrib funcao
    (15) statement -> . Var OpAtrib entrada
    (16) statement -> . tipoVar Var OpAtrib expr
    (17) statement -> . TipoVarString Var OpAtrib Texto
    (18) statement -> . tipoVar Var OpAtrib Var
    (19) statement -> . TipoVarInt Var OpAtrib Inteiro
    (20) statement -> . TipoVarReal Var OpAtrib Inteiro
    (21) statement -> . TipoVarReal Var OpAtrib Real
    (22) statement -> . tipoVar Var OpAtrib funcao
    (23) statement -> . TipoVarString Var OpAtrib entrada
    (24) statement -> . TipoVarInt Var OpAtrib entrada
    (25) statement -> . TipoVarReal Var OpAtrib entrada
    (26) statement -> . TipoVarBool Var OpAtrib entrada
    (27) statement -> . TipoVarBool Var OpAtrib true_false
    (28) statement -> . If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses
    (29) statement -> . If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses senaose
    (30) statement -> . If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses senaose Else AbreParenteses statements FechaParenteses
    (31) statement -> . If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses Else AbreParenteses statements FechaParenteses
    (32) statement -> . funcao
    (33) statement -> . funcao AbreParenteses statements FechaParenteses
    (58) statement -> . Print AbreParenteses expr FechaParenteses
    (5) tipoVar -> . TipoVarInt
    (6) tipoVar -> . TipoVarReal
    (7) tipoVar -> . TipoVarString
    (8) tipoVar -> . TipoVarBool
    (80) funcao -> . AbreParenteses param_vazio FechaParenteses
    (81) funcao -> . AbreParenteses param FechaParenteses

    Fim             shift and go to state 16
    While           shift and go to state 5
    Var             shift and go to state 7
    TipoVarString   shift and go to state 10
    TipoVarInt      shift and go to state 11
    TipoVarReal     shift and go to state 12
    TipoVarBool     shift and go to state 13
    If              shift and go to state 14
    Print           shift and go to state 15
    AbreParenteses  shift and go to state 6

    statement                      shift and go to state 17
    funcao                         shift and go to state 8
    tipoVar                        shift and go to state 9

state 4

    (3) statements -> statement .

    Fim             reduce using rule 3 (statements -> statement .)
    While           reduce using rule 3 (statements -> statement .)
    Var             reduce using rule 3 (statements -> statement .)
    TipoVarString   reduce using rule 3 (statements -> statement .)
    TipoVarInt      reduce using rule 3 (statements -> statement .)
    TipoVarReal     reduce using rule 3 (statements -> statement .)
    TipoVarBool     reduce using rule 3 (statements -> statement .)
    If              reduce using rule 3 (statements -> statement .)
    Print           reduce using rule 3 (statements -> statement .)
    AbreParenteses  reduce using rule 3 (statements -> statement .)
    FechaParenteses reduce using rule 3 (statements -> statement .)


state 5

    (4) statement -> While . AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses

    AbreParenteses  shift and go to state 18


state 6

    (80) funcao -> AbreParenteses . param_vazio FechaParenteses
    (81) funcao -> AbreParenteses . param FechaParenteses
    (72) param_vazio -> .
    (73) param -> . Inteiro
    (74) param -> . Real
    (75) param -> . Texto
    (76) param -> . Var
    (77) param -> . param Virgula param

    FechaParenteses reduce using rule 72 (param_vazio -> .)
    Inteiro         shift and go to state 21
    Real            shift and go to state 22
    Texto           shift and go to state 23
    Var             shift and go to state 24

    param_vazio                    shift and go to state 19
    param                          shift and go to state 20

state 7

    (9) statement -> Var . OpAtrib expr
    (10) statement -> Var . OpAtrib Texto
    (11) statement -> Var . OpAtrib Var
    (12) statement -> Var . OpAtrib Inteiro
    (13) statement -> Var . OpAtrib Real
    (14) statement -> Var . OpAtrib funcao
    (15) statement -> Var . OpAtrib entrada

    OpAtrib         shift and go to state 25


state 8

    (32) statement -> funcao .
    (33) statement -> funcao . AbreParenteses statements FechaParenteses

  ! shift/reduce conflict for AbreParenteses resolved as shift
    Fim             reduce using rule 32 (statement -> funcao .)
    While           reduce using rule 32 (statement -> funcao .)
    Var             reduce using rule 32 (statement -> funcao .)
    TipoVarString   reduce using rule 32 (statement -> funcao .)
    TipoVarInt      reduce using rule 32 (statement -> funcao .)
    TipoVarReal     reduce using rule 32 (statement -> funcao .)
    TipoVarBool     reduce using rule 32 (statement -> funcao .)
    If              reduce using rule 32 (statement -> funcao .)
    Print           reduce using rule 32 (statement -> funcao .)
    FechaParenteses reduce using rule 32 (statement -> funcao .)
    AbreParenteses  shift and go to state 26

  ! AbreParenteses  [ reduce using rule 32 (statement -> funcao .) ]


state 9

    (16) statement -> tipoVar . Var OpAtrib expr
    (18) statement -> tipoVar . Var OpAtrib Var
    (22) statement -> tipoVar . Var OpAtrib funcao

    Var             shift and go to state 27


state 10

    (17) statement -> TipoVarString . Var OpAtrib Texto
    (23) statement -> TipoVarString . Var OpAtrib entrada
    (7) tipoVar -> TipoVarString .

  ! shift/reduce conflict for Var resolved as shift
    Var             shift and go to state 28

  ! Var             [ reduce using rule 7 (tipoVar -> TipoVarString .) ]


state 11

    (19) statement -> TipoVarInt . Var OpAtrib Inteiro
    (24) statement -> TipoVarInt . Var OpAtrib entrada
    (5) tipoVar -> TipoVarInt .

  ! shift/reduce conflict for Var resolved as shift
    Var             shift and go to state 29

  ! Var             [ reduce using rule 5 (tipoVar -> TipoVarInt .) ]


state 12

    (20) statement -> TipoVarReal . Var OpAtrib Inteiro
    (21) statement -> TipoVarReal . Var OpAtrib Real
    (25) statement -> TipoVarReal . Var OpAtrib entrada
    (6) tipoVar -> TipoVarReal .

  ! shift/reduce conflict for Var resolved as shift
    Var             shift and go to state 30

  ! Var             [ reduce using rule 6 (tipoVar -> TipoVarReal .) ]


state 13

    (26) statement -> TipoVarBool . Var OpAtrib entrada
    (27) statement -> TipoVarBool . Var OpAtrib true_false
    (8) tipoVar -> TipoVarBool .

  ! shift/reduce conflict for Var resolved as shift
    Var             shift and go to state 31

  ! Var             [ reduce using rule 8 (tipoVar -> TipoVarBool .) ]


state 14

    (28) statement -> If . AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses
    (29) statement -> If . AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses senaose
    (30) statement -> If . AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses senaose Else AbreParenteses statements FechaParenteses
    (31) statement -> If . AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses Else AbreParenteses statements FechaParenteses

    AbreParenteses  shift and go to state 32


state 15

    (58) statement -> Print . AbreParenteses expr FechaParenteses

    AbreParenteses  shift and go to state 33


state 16

    (1) geral -> Inicio statements Fim .

    $end            reduce using rule 1 (geral -> Inicio statements Fim .)


state 17

    (2) statements -> statements statement .

    Fim             reduce using rule 2 (statements -> statements statement .)
    While           reduce using rule 2 (statements -> statements statement .)
    Var             reduce using rule 2 (statements -> statements statement .)
    TipoVarString   reduce using rule 2 (statements -> statements statement .)
    TipoVarInt      reduce using rule 2 (statements -> statements statement .)
    TipoVarReal     reduce using rule 2 (statements -> statements statement .)
    TipoVarBool     reduce using rule 2 (statements -> statements statement .)
    If              reduce using rule 2 (statements -> statements statement .)
    Print           reduce using rule 2 (statements -> statements statement .)
    AbreParenteses  reduce using rule 2 (statements -> statements statement .)
    FechaParenteses reduce using rule 2 (statements -> statements statement .)


state 18

    (4) statement -> While AbreParenteses . cond_param FechaParenteses AbreParenteses statements FechaParenteses
    (34) cond_param -> . Var OpRelaMenor Inteiro
    (35) cond_param -> . Var OpRelaMenor Real
    (36) cond_param -> . Var OpRelaMenor Var
    (37) cond_param -> . Var OpRelaMaior Inteiro
    (38) cond_param -> . Var OpRelaMaior Real
    (39) cond_param -> . Var OpRelaMaior Var
    (40) cond_param -> . Var OpRelaMenorIgual Inteiro
    (41) cond_param -> . Var OpRelaMenorIgual Real
    (42) cond_param -> . Var OpRelaMenorIgual Var
    (43) cond_param -> . Var OpRelaMaiorIgual Inteiro
    (44) cond_param -> . Var OpRelaMaiorIgual Real
    (45) cond_param -> . Var OpRelaMaiorIgual Var
    (46) cond_param -> . Var OpRelaIgual Inteiro
    (47) cond_param -> . Var OpRelaIgual Real
    (48) cond_param -> . Var OpRelaIgual Var
    (49) cond_param -> . Var OpRelaDiferente Inteiro
    (50) cond_param -> . Var OpRelaDiferente Real
    (51) cond_param -> . Var OpRelaDiferente Var
    (52) cond_param -> . Var OpLogAnd Inteiro
    (53) cond_param -> . Var OpLogAnd Real
    (54) cond_param -> . Var OpLogAnd Var
    (55) cond_param -> . Var OpLogOr Inteiro
    (56) cond_param -> . Var OpLogOr Real
    (57) cond_param -> . Var OpLogOr Var
    (61) cond_param -> . cond_param OpLogAnd cond_param
    (62) cond_param -> . cond_param OpLogOr cond_param

    Var             shift and go to state 35

    cond_param                     shift and go to state 34

state 19

    (80) funcao -> AbreParenteses param_vazio . FechaParenteses

    FechaParenteses shift and go to state 36


state 20

    (81) funcao -> AbreParenteses param . FechaParenteses
    (77) param -> param . Virgula param

    FechaParenteses shift and go to state 37
    Virgula         shift and go to state 38


state 21

    (73) param -> Inteiro .

    FechaParenteses reduce using rule 73 (param -> Inteiro .)
    Virgula         reduce using rule 73 (param -> Inteiro .)


state 22

    (74) param -> Real .

    FechaParenteses reduce using rule 74 (param -> Real .)
    Virgula         reduce using rule 74 (param -> Real .)


state 23

    (75) param -> Texto .

    FechaParenteses reduce using rule 75 (param -> Texto .)
    Virgula         reduce using rule 75 (param -> Texto .)


state 24

    (76) param -> Var .

    FechaParenteses reduce using rule 76 (param -> Var .)
    Virgula         reduce using rule 76 (param -> Var .)


state 25

    (9) statement -> Var OpAtrib . expr
    (10) statement -> Var OpAtrib . Texto
    (11) statement -> Var OpAtrib . Var
    (12) statement -> Var OpAtrib . Inteiro
    (13) statement -> Var OpAtrib . Real
    (14) statement -> Var OpAtrib . funcao
    (15) statement -> Var OpAtrib . entrada
    (63) expr -> . Inteiro
    (64) expr -> . Real
    (65) expr -> . Var
    (66) expr -> . expr OpMatSoma expr
    (67) expr -> . expr OpMatSub expr
    (68) expr -> . expr OpMatMult expr
    (69) expr -> . expr OpMatDiv expr
    (70) expr -> . AbreParenteses expr FechaParenteses
    (71) expr -> . Texto
    (80) funcao -> . AbreParenteses param_vazio FechaParenteses
    (81) funcao -> . AbreParenteses param FechaParenteses
    (78) entrada -> . Input AbreParenteses Texto FechaParenteses
    (79) entrada -> . Input AbreParenteses FechaParenteses

    Texto           shift and go to state 41
    Var             shift and go to state 39
    Inteiro         shift and go to state 42
    Real            shift and go to state 43
    AbreParenteses  shift and go to state 46
    Input           shift and go to state 47

    expr                           shift and go to state 40
    funcao                         shift and go to state 44
    entrada                        shift and go to state 45

state 26

    (33) statement -> funcao AbreParenteses . statements FechaParenteses
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . While AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses
    (9) statement -> . Var OpAtrib expr
    (10) statement -> . Var OpAtrib Texto
    (11) statement -> . Var OpAtrib Var
    (12) statement -> . Var OpAtrib Inteiro
    (13) statement -> . Var OpAtrib Real
    (14) statement -> . Var OpAtrib funcao
    (15) statement -> . Var OpAtrib entrada
    (16) statement -> . tipoVar Var OpAtrib expr
    (17) statement -> . TipoVarString Var OpAtrib Texto
    (18) statement -> . tipoVar Var OpAtrib Var
    (19) statement -> . TipoVarInt Var OpAtrib Inteiro
    (20) statement -> . TipoVarReal Var OpAtrib Inteiro
    (21) statement -> . TipoVarReal Var OpAtrib Real
    (22) statement -> . tipoVar Var OpAtrib funcao
    (23) statement -> . TipoVarString Var OpAtrib entrada
    (24) statement -> . TipoVarInt Var OpAtrib entrada
    (25) statement -> . TipoVarReal Var OpAtrib entrada
    (26) statement -> . TipoVarBool Var OpAtrib entrada
    (27) statement -> . TipoVarBool Var OpAtrib true_false
    (28) statement -> . If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses
    (29) statement -> . If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses senaose
    (30) statement -> . If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses senaose Else AbreParenteses statements FechaParenteses
    (31) statement -> . If AbreParenteses cond_param FechaParenteses AbreParenteses statements FechaParenteses Else AbreParenteses statements FechaParenteses
    (32) statement -> . funcao
    (33) statement -> . funcao AbreParenteses statements FechaParenteses
    (58) statement -> . Print AbreParenteses expr FechaParenteses
    (5) tipoVar -> . TipoVarInt
    (6) tipoVar -> . TipoVarReal
    (7) tipoVar -> . TipoVarString
    (8) tipoVar -> . TipoVarBool
    (80) funcao -> . AbreParenteses param_vazio FechaParenteses
    (81) funcao -> . AbreParenteses param FechaParenteses

    While           shift and go to state 5
    Var             shift and go to state 7
    TipoVarString   shift and go to state 10
    TipoVarInt      shift and go to state 11
    TipoVarReal     shift and go to state 12
    TipoVarBool     shift and go to state 13
    If              shift and go to state 14
    Print           shift and go to state 15
    AbreParenteses  shift and go to state 6

    funcao                         shift and go to state 8
    statements                     shift and go to state 48
    statement                      shift and go to state 4
    tipoVar                        shift and go to state 9

state 27

    (16) statement -> tipoVar Var . OpAtrib expr
    (18) statement -> tipoVar Var . OpAtrib Var
    (22) statement -> tipoVar Var . OpAtrib funcao

    OpAtrib         shift and go to state 49


state 28

    (17) statement -> TipoVarString Var . OpAtrib Texto
    (23) statement -> TipoVarString Var . OpAtrib entrada

    OpAtrib         shift and go to state 50


state 29

    (19) statement -> TipoVarInt Var . OpAtrib Inteiro
    (24) statement -> TipoVarInt Var . OpAtrib entrada

    OpAtrib         shift and go to state 51


state 30

    (20) statement -> TipoVarReal Var . OpAtrib Inteiro
    (21) statement -> TipoVarReal Var . OpAtrib Real
    (25) statement -> TipoVarReal Var . OpAtrib entrada

    OpAtrib         shift and go to state 52


state 31

    (26) statement -> TipoVarBool Var . OpAtrib entrada
    (27) statement -> TipoVarBool Var . OpAtrib true_false

    OpAtrib         shift and go to state 53


state 32

    (28) statement -> If AbreParenteses . cond_param FechaParenteses AbreParenteses statements FechaParenteses
    (29) statement -> If AbreParenteses . cond_param FechaParenteses AbreParenteses statements FechaParenteses senaose
    (30) statement -> If AbreParenteses . cond_param FechaParenteses AbreParenteses statements FechaParenteses senaose Else AbreParenteses statements FechaParenteses
    (31) statement -> If AbreParenteses . cond_param FechaParenteses AbreParenteses statements FechaParenteses Else AbreParenteses statements FechaParenteses
    (34) cond_param -> . Var OpRelaMenor Inteiro
    (35) cond_param -> . Var OpRelaMenor Real
    (36) cond_param -> . Var OpRelaMenor Var
    (37) cond_param -> . Var OpRelaMaior Inteiro
    (38) cond_param -> . Var OpRelaMaior Real
    (39) cond_param -> . Var OpRelaMaior Var
    (40) cond_param -> . Var OpRelaMenorIgual Inteiro
    (41) cond_param -> . Var OpRelaMenorIgual Real
    (42) cond_param -> . Var OpRelaMenorIgual Var
    (43) cond_param -> . Var OpRelaMaiorIgual Inteiro
    (44) cond_param -> . Var OpRelaMaiorIgual Real
    (45) cond_param -> . Var OpRelaMaiorIgual Var
    (46) cond_param -> . Var OpRelaIgual Inteiro
    (47) cond_param -> . Var OpRelaIgual Real
    (48) cond_param -> . Var OpRelaIgual Var
    (49) cond_param -> . Var OpRelaDiferente Inteiro
    (50) cond_param -> . Var OpRelaDiferente Real
    (51) cond_param -> . Var OpRelaDiferente Var
    (52) cond_param -> . Var OpLogAnd Inteiro
    (53) cond_param -> . Var OpLogAnd Real
    (54) cond_param -> . Var OpLogAnd Var
    (55) cond_param -> . Var OpLogOr Inteiro
    (56) cond_param -> . Var OpLogOr Real
    (57) cond_param -> . Var OpLogOr Var
    (61) cond_param -> . cond_param OpLogAnd cond_param
    (62) cond_param -> . cond_param OpLogOr cond_param

    Var             shift and go to state 35

    cond_param                     shift and go to state 54

state 33

    (58) statement -> Print AbreParenteses . expr FechaParenteses
    (63) expr -> . Inteiro
    (64) expr -> . Real
    (65) expr -> . Var
    (66) expr -> . expr OpMatSoma expr
    (67) expr -> . expr OpMatSub expr
    (68) expr -> . expr OpMatMult expr
    (69) expr -> . expr OpMatDiv expr
    (70) expr -> . AbreParenteses expr FechaParenteses
    (71) expr -> . Texto

    Inteiro         shift and go to state 57
    Real            shift and go to state 58
    Var             shift and go to state 59
    AbreParenteses  shift and go to state 55
    Texto           shift and go to state 60

    expr                           shift and go to state 56

state 34

    (4) statement -> While AbreParenteses cond_param . FechaParenteses AbreParenteses statements FechaParenteses
    (61) cond_param -> cond_param . OpLogAnd cond_param
    (62) cond_param -> cond_param . OpLogOr cond_param

    FechaParenteses shift and go to state 61
    OpLogAnd        shift and go to state 62
    OpLogOr         shift and go to state 63


state 35

    (34) cond_param -> Var . OpRelaMenor Inteiro
    (35) cond_param -> Var . OpRelaMenor Real
    (36) cond_param -> Var . OpRelaMenor Var
    (37) cond_param -> Var . OpRelaMaior Inteiro
    (38) cond_param -> Var . OpRelaMaior Real
    (39) cond_param -> Var . OpRelaMaior Var
    (40) cond_param -> Var . OpRelaMenorIgual Inteiro
    (41) cond_param -> Var . OpRelaMenorIgual Real
    (42) cond_param -> Var . OpRelaMenorIgual Var
    (43) cond_param -> Var . OpRelaMaiorIgual Inteiro
    (44) cond_param -> Var . OpRelaMaiorIgual Real
    (45) cond_param -> Var . OpRelaMaiorIgual Var
    (46) cond_param -> Var . OpRelaIgual Inteiro
    (47) cond_param -> Var . OpRelaIgual Real
    (48) cond_param -> Var . OpRelaIgual Var
    (49) cond_param -> Var . OpRelaDiferente Inteiro
    (50) cond_param -> Var . OpRelaDiferente Real
    (51) cond_param -> Var . OpRelaDiferente Var
    (52) cond_param -> Var . OpLogAnd Inteiro
    (53) cond_param -> Var . OpLogAnd Real
    (54) cond_param -> Var . OpLogAnd Var
    (55) cond_param -> Var . OpLogOr Inteiro
    (56) cond_param -> Var . OpLogOr Real
    (57) cond_param -> Var . OpLogOr Var

    OpRelaMenor     shift and go to state 64
    OpRelaMaior     shift and go to state 65
    OpRelaMenorIgual shift and go to state 66
    OpRelaMaiorIgual shift and go to state 67
    OpRelaIgual     shift and go to state 68
    OpRelaDiferente shift and go to state 69
    OpLogAnd        shift and go to state 70
    OpLogOr         shift and go to state 71


state 36

    (80) funcao -> AbreParenteses param_vazio FechaParenteses .

    AbreParenteses  reduce using rule 80 (funcao -> AbreParenteses param_vazio FechaParenteses .)
    Fim             reduce using rule 80 (funcao -> AbreParenteses param_vazio FechaParenteses .)
    While           reduce using rule 80 (funcao -> AbreParenteses param_vazio FechaParenteses .)
    Var             reduce using rule 80 (funcao -> AbreParenteses param_vazio FechaParenteses .)
    TipoVarString   reduce using rule 80 (funcao -> AbreParenteses param_vazio FechaParenteses .)
    TipoVarInt      reduce using rule 80 (funcao -> AbreParenteses param_vazio FechaParenteses .)
    TipoVarReal     reduce using rule 80 (funcao -> AbreParenteses param_vazio FechaParenteses .)
    TipoVarBool     reduce using rule 80 (funcao -> AbreParenteses param_vazio FechaParenteses .)
    If              reduce using rule 80 (funcao -> AbreParenteses param_vazio FechaParenteses .)
    Print           reduce using rule 80 (funcao -> AbreParenteses param_vazio FechaParenteses .)
    FechaParenteses reduce using rule 80 (funcao -> AbreParenteses param_vazio FechaParenteses .)


state 37

    (81) funcao -> AbreParenteses param FechaParenteses .
